fix footer on mobile

--- a/less/index.less
+++ b/less/index.less
@@ -349,4 +349,9 @@ footer {
   background: #dddddd;
   padding: 20px 0;
   text-align: center;
+  p {
+    @media @mobile {
+      margin-right: 20px;
+    }
+  }
 }
